# openclaw-agent-manager

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
docs/plans/: 2026-03-08-implementation-plan.md  2026-03-08-openclaw-desktop-design.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: agents.rs  chat.rs  config.rs  cron.rs  gateway.rs  git.rs  mod.rs  sessions.rs  skills.rs
src-tauri/src/gateway/: client.rs  device_auth.rs  mod.rs  protocol.rs  reconnect.rs
src-tauri/src/git/: mod.rs
src/components/: ErrorBoundary.tsx  FileEditor.tsx  HistoryPanel.tsx  McpEditor.tsx  SkillsPanel.tsx
src/components/__tests__/: McpEditor.test.ts
src/layouts/: MainLayout.tsx
src/lib/: tauri-api.ts
src/pages/: AgentDetail.tsx  Agents.tsx  Chat.tsx  Config.tsx  Cron.tsx
src/stores/: agents-store.ts  chat-store.ts  config-store.ts  cron-store.ts  gateway-store.ts  skills-store.ts
src/stores/__tests__/: agents-store.test.ts  gateway-store.test.ts
src/test/: setup.ts
